# fast-uuid-v7

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
benches/: benchmark.rs
src/: lib.rs
