[package]
name = "fast-uuid-v7"
version = "0.1.1"
edition = "2021"
description = "A high-performance Rust library for generating UUID v7 compatible identifiers."
license = "MIT"

[dependencies]
rand = "0.9"

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = "0.8"
uuid = { version = "1", features = ["v7"] }
